--- a/index.ipynb
+++ b/index.ipynb
@@ -89,22 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'art.vandelay@vandelay.co'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandelay.co\"\n"
+    "email = \"art.vandelay@vandelay.co\"\n",
+    "email"
    ]
   },
   {
