automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,23 +246,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art Vandelay'"
+       "'art.vandelay@vandelay.co'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "email\n",
-    "name"
+    "email\n"
    ]
   },
   {
