--- a/index.ipynb
+++ b/index.ipynb
@@ -246,22 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art.vandelay@vandelay.co'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "email\n"
+    "email\n",
+    "name"
    ]
   },
   {
